# brainrot-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.txt  architecture_notes.txt  compose.yaml  pyproject.toml  requirements.txt  run.py  setup.sh  test.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0ef0dc05fbb5_intial_revision.py  317ab8febdca_user_id_migrated_to_uuid.py  436f2849440e_.py  85bb721e84eb_.py  90a1814f296b_initial_version.py  ad18d2ffe2b7_.py  b25bf0d9aeaf_.py  b5580561ff1c_add_payment_provider_id_to_balance_.py  c700103fdc80_.py  c812d05958ce_.py  e922ed3151d2_add_reserved_balance_and_balance_.py  e9fb8a49f484_refresh_tokens_model_updated.py  f0851e4680a5_.py
scripts/: manage_reservation.py  modify_user_balance.py  modify_video_format_price.py  simulate_payment.py  test_stripe.py
src/: main.py  settings.py
src/domain/entities/: __init__.py  balance_transaction.py  refresh_token.py  social_account.py  user.py  video_format.py  video_job.py
src/domain/enums/: __init__.py  balance_transaction_type.py  social_platform.py  user_role.py  video_job_status.py
src/domain/exceptions/: __init__.py  account_validation.py  auth.py  db.py  (+7 more)
src/infrastructure/: celery_app.py
src/presentation/: schemas.py
src/worker/: .env.example  Dockerfile  requirements.txt
tests/: conftest.py
worker-prev/: Dockerfile  main.py  requirements.txt  setup.py
worker-prev/common/: __init__.py  audio.py  formatting.py  pexels.py  redis_publisher.py  subtitles.py
worker-prev/worker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+234 files in other folders)
