[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
