[project]
name = "backend"
version = "0.1.0"
description = "Backend for FastAPI brainrot generation project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.41",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", # pycodestyle (style + basic error)
    "F", # pyflakes (logic errors)
    "I", # import sorting
]
ignore = ["E501"]
fixable = ["ALL"] # fix everything that ruff can fix

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"


[tool.mypy]
exclude = [
    "^scripts/"
]
